Improved code readability and fixed minor bugs

--- a/style.css
+++ b/style.css
@@ -6,15 +6,16 @@ html {
     height: 100%;
 }
 
-.body {
+body {
     background-color:#D6E2F0;
+    font-family: 'Outfit', sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
 }
 
-.main {
+main {
     background-color: white;
     flex-direction: column;
     align-items: center;
@@ -23,7 +24,7 @@ html {
     width: 320px;
     height: 497px;
     border-radius: 17px;
-    box-shadow: 0 0 30px 0 #c7c7c7;
+    box-shadow: 0 11px 40px -10px #b3c1cc;
 }
 
 img {
@@ -32,17 +33,15 @@ img {
     border-radius: 10px;
 }
 
-.h1 {
-    font-family: 'Outfit', sans-serif;
+h1 {
     color: hsl(218, 44%, 22%);
     font-weight: 700;
     font-size: 22px;
     text-align: center;
-    margin: 24px 33px 0;
+    margin: 24px 32px 0;
 }
 
-.p {
-    font-family: 'Outfit', sans-serif;
+p {
     color: hsl(220, 15%, 55%);
     font-weight: 400;
     font-size: 15px;
